Style des inputs et des boutons

--- a/VampGen/resources/assets/sass/app.scss
+++ b/VampGen/resources/assets/sass/app.scss
@@ -1,4 +1,7 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @charset "UTF-8";
 @import 'modules/reset';
-@import "modules/menu";
+@import 'modules/menu';
+@import 'modules/layout';
+@import 'modules/form';
+@import 'modules/buttons';
