Stylisation des inputs de type text

--- a/VampGen/resources/assets/sass/modules/_menu.scss
+++ b/VampGen/resources/assets/sass/modules/_menu.scss
@@ -2,8 +2,9 @@
 
 	display:flex;
 	background-color:#d50000;
+  color:white;
 	padding:10px 30px 10px 0;
-    margin-bottom:50px;
+  margin-bottom:50px;
     
 	& ul {
     	display: flex;
