--- a/VampGen/resources/assets/sass/modules/_buttons.scss
+++ b/VampGen/resources/assets/sass/modules/_buttons.scss
@@ -1,4 +1,4 @@
-.button, input[type=submit] {
+.vg-button, input[type=submit] {
     background-color: #4CAF50;
     color: white;
     padding: 10px 20px;
@@ -8,6 +8,6 @@
     cursor: pointer;
 }
 
-.button:hover, input[type=submit]:hover {
+.vg-button:hover, input[type=submit]:hover {
     background-color: #45a049;
 }
