--- a/VampGen/resources/assets/sass/modules/_form.scss
+++ b/VampGen/resources/assets/sass/modules/_form.scss
@@ -1,12 +1,34 @@
-input[type=text], select {
-    padding: 10px 2px;
-    margin: 5px 0 15px 0;
+input[type=text] {
+    padding: 10px 8px;
+    margin: 25px 0 20px 0;
     display: block;
     border:transparent;
     border-bottom: 2px solid #ccc;
     box-sizing: border-box;
-    transition: border-bottom 0.5s ease;
+    transition: all 0.5s ease;
     &:focus{
         border-bottom: 2px solid red;
     }
+}
+.vg-field {
+    position:relative;
+}
+label {
+    color:#666;
+    text-transform: uppercase;
+    font-size:16px;
+    font-weight:normal;
+    pointer-events:none;
+    position:absolute;
+    top:10px;
+    left:8px;
+    transition:all 0.2s ease; 
+    -moz-transition:all 0.2s ease; 
+    -webkit-transition:all 0.2s ease;
+}
+input[type=text]:focus ~ label, input[type=text]:valid ~ label {
+    color:black;
+    font-size:12px;
+    top:-10px;
+    left:0px;
 }
