--- a/VampGen/resources/assets/sass/modules/_reset.scss
+++ b/VampGen/resources/assets/sass/modules/_reset.scss
@@ -3,10 +3,16 @@
 	margin: 0;
 	box-sizing:border-box;
 }
+body {
+	font-family: 'Lato', sans-serif;
+}
 a {
 	text-decoration:none;
 	color:inherit;
 }
 ul li {
 	list-style-type:none;
+}
+input:invalid, input:required {
+    box-shadow:none;
 }
