--- a/VampGen/resources/assets/sass/modules/_form.scss
+++ b/VampGen/resources/assets/sass/modules/_form.scss
@@ -1,34 +1,67 @@
-input[type=text] {
-    padding: 10px 8px;
+/* Style du input de type "text" */
+
+input[type="text"],input[type="password"], input[type="email"], input[type="url"], input[type="time"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="tel"], input[type="number"], input[type="search"]{
+    
+    padding: 10px 8px 10px 0;
     margin: 25px 0 20px 0;
     display: block;
     border:transparent;
-    border-bottom: 2px solid #ccc;
-    box-sizing: border-box;
+    border-bottom: 1px solid #ccc;
     transition: all 0.5s ease;
+
     &:focus{
-        border-bottom: 2px solid red;
+        border-bottom: 1px solid red;
     }
+
 }
+/* Style du input de type "select" */
+
+.vg-field select, .vg-field select:focus {
+
+    font-size:14px;
+    width: 244px;
+    height:40px;
+    padding: 10px 5px 10px 0;
+    margin: 15px 0 10px 0;
+    background-color:transparent;
+    border:transparent;
+    border-bottom: 1px solid #ccc;
+    outline:0;
+    background: url(../img/downarrow.png) 96% / 5% no-repeat transparent;
+
+}
+
+.vg-field select option {
+    
+    padding:6px 5px;
+    box-shadow:none;
+    
+}
+.vg-field select option:hover {
+    background-color:red;
+}
+
+/* Style du label */
+
 .vg-field {
     position:relative;
 }
-label {
+input ~ label {
     color:#666;
-    text-transform: uppercase;
     font-size:16px;
     font-weight:normal;
     pointer-events:none;
     position:absolute;
     top:10px;
-    left:8px;
     transition:all 0.2s ease; 
     -moz-transition:all 0.2s ease; 
     -webkit-transition:all 0.2s ease;
 }
-input[type=text]:focus ~ label, input[type=text]:valid ~ label {
+
+/* Style du label actif (focus ou valide) */
+
+input:focus ~ label, input:valid ~ label {
     color:black;
     font-size:12px;
     top:-10px;
-    left:0px;
 }
