--- a/VampGen/resources/assets/sass/modules/_reset.scss
+++ b/VampGen/resources/assets/sass/modules/_reset.scss
@@ -13,6 +13,12 @@ a {
 ul li {
 	list-style-type:none;
 }
-input:invalid, input:required {
-    box-shadow:none;
+input:invalid, input:required, input:focus {
+	box-shadow:none;
+	outline:none;
+}
+select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
