--- a/VampGen/resources/assets/sass/modules/_buttons.scss
+++ b/VampGen/resources/assets/sass/modules/_buttons.scss
@@ -1,13 +1,34 @@
 .vg-button, input[type=submit] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
-    margin: 8px 0;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+	width: 120px;
+	height: 32px;
+	line-height: 32px;
+	background-color: #4CAF50;
+	color: white;
+	font-size: 0.9em;
+	margin: 8px 0;
+	border: none;
+	border-radius: 2px;
+	cursor: pointer;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+	outline:none;
+	text-shadow: none;
+	// position: absolute;
+	transition: all .4s ease-out;
+
 }
 
 .vg-button:hover, input[type=submit]:hover {
-    background-color: #45a049;
+	background-color: #45a049;
+}
+.ripple{
+  position: absolute;
+  border-radius: 100%;
+  width: 0;
+  height: 0;
+  background: rgba(255,255,255, .2);
+  transition: all .4s ease-out;
+}
+
+.notransition{
+  transition: none !important;
 }
