--- a/VampGen/resources/assets/sass/modules/_reset.scss
+++ b/VampGen/resources/assets/sass/modules/_reset.scss
@@ -4,7 +4,7 @@
 	box-sizing:border-box;
 }
 body {
-	font-family: 'Lato', sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 a {
 	text-decoration:none;
