--- a/VampGen/resources/assets/sass/modules/_layout.scss
+++ b/VampGen/resources/assets/sass/modules/_layout.scss
@@ -28,8 +28,7 @@ body{
 }
 
 .segment{
-	width: 40vw;
-	height: 80vh;
+	width: 100%;
 	background-color: #FAFAFA;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 	&.attached{
