--- a/VampGen/resources/assets/sass/modules/_buttons.scss
+++ b/VampGen/resources/assets/sass/modules/_buttons.scss
@@ -5,7 +5,7 @@
 	background-color: #4CAF50;
 	color: white;
 	font-size: 0.9em;
-	margin: 8px 0;
+	margin: 10px;
 	border: none;
 	border-radius: 2px;
 	cursor: pointer;
@@ -14,7 +14,6 @@
 	text-shadow: none;
 	// position: absolute;
 	transition: all .4s ease-out;
-
 }
 
 .vg-button:hover, input[type=submit]:hover {
