--- a/VampGen/resources/assets/sass/modules/_form.scss
+++ b/VampGen/resources/assets/sass/modules/_form.scss
@@ -1,3 +1,10 @@
+/* Style du formulaire */
+
+.vg-form {
+    display:block;
+    width:100%;
+}
+
 /* Style du input de type "text" */
 
 input[type="text"],input[type="password"], input[type="email"], input[type="url"], input[type="time"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="tel"], input[type="number"], input[type="search"]{
