--- a/VampGen/resources/assets/sass/modules/_layout.scss
+++ b/VampGen/resources/assets/sass/modules/_layout.scss
@@ -11,7 +11,13 @@ body{
 	width:100%;
 	margin:0 auto;
 }
-
+.column {
+	display: flex;
+	flex-direction:row wrap;
+	justify-content:space-arround;
+	padding:20px;
+	width:50%;
+}
 .row{
 
 }
@@ -31,11 +37,15 @@ body{
 	width: 100%;
 	background-color: #FAFAFA;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+	margin: 0 0 100px 0;
+	padding-bottom:20px;
 	&.attached{
 		height: 10vh;
 		line-height: 10vh;
 		box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.26);
 		background-color: #B71C1C;
+		margin:0;
+		padding:0;
 		&.top{
 			border-radius: 2px 2px 0 0;
 			border-bottom: 3px solid #E53935;
