corrections des variables de couleur et ajouts du modules variable dans le app.scss

--- a/VampGen/resources/assets/sass/app.scss
+++ b/VampGen/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 @charset "UTF-8";
+@import 'modules/variables';
 @import 'modules/reset';
 @import 'modules/menu';
 @import 'modules/layout';
