--- a/VampGen/resources/assets/sass/modules/_variables.scss
+++ b/VampGen/resources/assets/sass/modules/_variables.scss
@@ -1,9 +1,9 @@
-@light-red:#F44336;
-@red:#d50000;
-@dark-red:#E53935;
+$light-red:#F44336;
+$red:#d50000;
+$dark-red:#E53935;
 
-@black:#000;
-@white:#fff;
+$black:#000;
+$white:#fff;
 
-@ligh-grey:#FAFAFA;
-@green:#4CAF50;
+$ligh-grey:#FAFAFA;
+$green:#4CAF50;
