--- a/VampGen/resources/assets/sass/modules/_layout.scss
+++ b/VampGen/resources/assets/sass/modules/_layout.scss
@@ -11,34 +11,44 @@ body{
 	width:100%;
 	margin:0 auto;
 }
-.column {
+.column{
 	display: flex;
-	flex-direction:row wrap;
-	justify-content:space-arround;
-	padding:20px;
-	width:50%;
+	width:100%;
+	flex-direction:column wrap;
+	justify-content:flex-start;
+	&>*{
+		padding-right: 20px;
+		padding-left: 20px;
+	}
 }
 .row{
-
+	padding:20px;
+	flex-direction:row wrap;
+	justify-content:space-around;
+	margin-top: 10px;
 }
 
 .segment{
 	width: 100%;
-	background-color: #FAFAFA;
+	background-color: $light-grey;
 	padding:1.3em;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
-	margin: 0 0 100px 0;
+	margin: 0 0 50px 0;
 	padding-bottom:20px;
 	&.attached{
 		height: 10vh;
 		line-height: 10vh;
 		box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.26);
-		background-color: #B71C1C;
+		background-color: $dark-red;
 		margin:0;
 		padding:0;
 		&.top{
 			border-radius: 2px 2px 0 0;
-			border-bottom: 3px solid #E53935;
+			border-bottom: 3px solid $light-red;
+		}
+		&.bottom{
+			border-radius: 0 0 2px 2px;
+			border-top: 3px solid $light-red;
 		}
 	}
 }
