--- a/VampGen/resources/assets/sass/modules/_variables.scss
+++ b/VampGen/resources/assets/sass/modules/_variables.scss
@@ -1,9 +1,9 @@
 $light-red:#F44336;
 $red:#d50000;
-$dark-red:#E53935;
+$dark-red:#B71C1C;
 
 $black:#000;
 $white:#fff;
 
-$ligh-grey:#FAFAFA;
+$light-grey:#FAFAFA;
 $green:#4CAF50;
