--- a/VampGen/resources/assets/sass/modules/_layout.scss
+++ b/VampGen/resources/assets/sass/modules/_layout.scss
@@ -14,18 +14,25 @@ body{
 .column{
 	display: flex;
 	width:100%;
-	flex-direction:column wrap;
-	justify-content:flex-start;
 	&>*{
+		flex-direction:column;
+		flex-wrap:wrap;
 		padding-right: 20px;
 		padding-left: 20px;
 	}
 }
 .row{
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: flex-start;
 	padding:20px;
-	flex-direction:row wrap;
-	justify-content:space-around;
-	margin-top: 10px;
+	flex: 0 0 32%;
+	margin: 1% 0;
+	padding-bottom: 10px;
+	&:nth-child(3n-1) {
+		margin-left: 2%;
+		margin-right: 2%;
+	}
 }
 
 .segment{
@@ -66,5 +73,6 @@ body{
 
 .center-aligned{
 	display: flex;
+	flex-direction:column wrap;
 	justify-content: center;
 }
